cmake_minimum_required(VERSION 3.0)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_definitions(-DLITTLEENDIAN)
add_definitions(-DSOFTFLOAT_FAST_DIV32TO16)

set(INC_SPECIALIZE ${CMAKE_CURRENT_SOURCE_DIR}/specialize.h)
set(SRC_SPECIALIZE-8086
    ${CMAKE_CURRENT_SOURCE_DIR}/s_commonNaNToF16UI.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_commonNaNToF32UI.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_commonNaNToF64UI.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_f16UIToCommonNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_f32UIToCommonNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_f64UIToCommonNaN.c
)

set(SRC_SPECIALIZE-8086_FAST_INT64
    ${CMAKE_CURRENT_SOURCE_DIR}/FAST_INT64/s_commonNaNToExtF80UI.c
    ${CMAKE_CURRENT_SOURCE_DIR}/FAST_INT64/s_commonNaNToF128UI.c
    ${CMAKE_CURRENT_SOURCE_DIR}/FAST_INT64/s_extF80UIToCommonNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/FAST_INT64/s_f128UIToCommonNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/FAST_INT64/s_propagateNaNExtF80UI.c
)

set(SRC_SPECIALIZE-8086_NON_FAST_INT64
    ${CMAKE_CURRENT_SOURCE_DIR}/NON_FAST_INT64/s_commonNaNToExtF80M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/NON_FAST_INT64/s_commonNaNToF128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/NON_FAST_INT64/s_extF80MToCommonNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/NON_FAST_INT64/s_f128MToCommonNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/NON_FAST_INT64/s_propagateNaNExtF80M.c
)

add_subdirectory(NON-SSE)
add_subdirectory(SSE)
