cmake_minimum_required(VERSION 3.8)

set(TARGET_PLATFORM_NAME 8086-SSE)

set(SRC_TARGET_FAST_INT64
    ${SRC_TARGET-8086_FAST_INT64}
    ${CMAKE_CURRENT_SOURCE_DIR}/s_propagateNaNF128UI.cpp
)

set(ALL_SRC
    ${INC_SOFTFLOAT}
    ${INC_OTHERS}
    ${SRC_OTHERS}
    ${SRC_OTHERS_FAST_INT64}
    ${SRC_PRIMITIVES_FAST_INT64}
    ${SRC_PRIMITIVES}
    ${INC_PRIMITIVES}
    ${SRC_TARGET-8086_SSE}
    ${INC_TARGET}
    ${SRC_TARGET_FAST_INT64}
)
source_group(TREE ${SOFTFLOAT_ROOT} FILES ${ALL_SRC})

add_library(softfloat-${TARGET_PLATFORM_NAME}-fi64 EXCLUDE_FROM_ALL ${ALL_SRC})
target_link_libraries(softfloat-${TARGET_PLATFORM_NAME}-fi64 PRIVATE softfloat-build-defs)
set_target_properties(softfloat-${TARGET_PLATFORM_NAME}-fi64  PROPERTIES FOLDER "softfloat/${TARGET_PLATFORM_NAME}")
target_compile_definitions(softfloat-${TARGET_PLATFORM_NAME}-fi64 PRIVATE SOFTFLOAT_FAST_INT64)
if(SOFTFLOAT_FAST_DIV64TO32)
    target_compile_definitions(softfloat-${TARGET_PLATFORM_NAME}-fi64 PRIVATE SOFTFLOAT_FAST_DIV64TO32)
endif(SOFTFLOAT_FAST_DIV64TO32)
